TIlpasning til StamPLC

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ data_dir = data
 extra_configs = 
 	factory_settings.ini
 	features.ini
-default_envs = esp32-s3-devkitc-1
+default_envs = m5stack-stamp-s3
 
 [env]
 framework = arduino
@@ -91,17 +91,6 @@ lib_deps =
 	ArduinoJson@>=7.0.0
     elims/PsychicMqttClient@^0.2.3
 
-[env:esp32-c3-devkitm-1]
-board = esp32-c3-devkitm-1
-board_build.mcu = esp32c3
-; Uncomment min_spiffs.csv setting if using EMBED_WWW with ESP32
-board_build.partitions = min_spiffs.csv
-; Use USB CDC for firmware upload and serial terminal
-; board_upload.before_reset = usb_reset
-; build_flags = 
-;     ${env.build_flags}
-;     -DARDUINO_USB_CDC_ON_BOOT=1
-;     -DARDUINO_USB_MODE=1
 
 [env:esp32-s3-devkitc-1]
 board = esp32-s3-devkitc-1
@@ -118,16 +107,28 @@ board_build.partitions = default_8MB.csv
 ; Works for nodemcu-32s, devkit-v1 boards and probably others. You can change the pin defines below if needed.
 board = esp32dev
 board_build.partitions = min_spiffs.csv
+
 build_flags =
     ${env.build_flags}
     -D LED_BUILTIN=2
     -D KEY_BUILTIN=0
 
-[env:adafruit_feather_esp32s3_nopsram]
-board = adafruit_feather_esp32s3_nopsram
-board_build.partitions = default_8MB.csv
-board_upload.before_reset = usb_reset
+[env:m5stack-stamp-s3]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+upload_speed = 1500000
 build_flags = 
     ${env.build_flags}
+    -DESP32S3
+    -DCORE_DEBUG_LEVEL=5
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DARDUINO_USB_MODE=1
+
+lib_deps =
+    ${env.lib_deps}
+    M5StamPLC=https://github.com/m5stack/M5StamPLC
+    M5Unified=https://github.com/m5stack/M5Unified
+
+
+
