--- a/platformio.ini
+++ b/platformio.ini
@@ -121,7 +121,7 @@ upload_speed = 1500000
 build_flags = 
     ${env.build_flags}
     -DESP32S3
-    -DCORE_DEBUG_LEVEL=5
+   ; -DCORE_DEBUG_LEVEL=5
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DARDUINO_USB_MODE=1
 
@@ -130,5 +130,13 @@ lib_deps =
     M5StamPLC=https://github.com/m5stack/M5StamPLC
     M5Unified=https://github.com/m5stack/M5Unified
 
+[env:HAN2X]
+board = han2x
+board_upload.flash_size = 16MB
+board_build.partitions = default_16MB.csv
+build_flags =
+    ${env.build_flags}
+    -D LED_BUILTIN=2
+    -D KEY_BUILTIN=0
 
 
