--- a/factory_settings.ini
+++ b/factory_settings.ini
@@ -37,7 +37,7 @@ build_flags =
 
   ; MQTT settings
   -D FACTORY_MQTT_ENABLED=false
-  -D FACTORY_MQTT_URI=\"mqtts://mqtt.eclipseprojects.io:8883\"
+  -D FACTORY_MQTT_URI=\"mqtts://192.168.1.94:1883\"
   -D FACTORY_MQTT_USERNAME=\"\" ; supports placeholders
   -D FACTORY_MQTT_PASSWORD=\"\"
   -D FACTORY_MQTT_CLIENT_ID=\"#{platform}-#{unique_id}\" ; supports placeholders
